# uecs-llm

./: .env.example  .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  setup.sh
auto_test/: README.md  auto_test_runner.py  line.env  notify.py  requirements.txt  test_config.json
auto_test/systemd/: pico-test.service
auto_test/udev/: 99-pico-test.rules
benchmarks/greenhouse/: README.md  evaluate.py  runner.py
cloud/: .env.example  docker-compose.yaml
cloud/telegraf/: telegraf.conf
cloud_server/: install.sh
cloud_server/grafana/: SETUP.md  setup_grafana.sh
cloud_server/influxdb/: SETUP.md  setup_influxdb.sh
cloud_server/scripts/: import_all_arsprout.sh  import_arsprout_csv.py  requirements.txt
cloud_server/telegraf/: SETUP.md  setup_telegraf.sh  telegraf.conf
config/: channel_map.yaml  crop_irrigation.yaml  farmers.yaml.example  farmers_secrets.yaml.example  forecast.yaml  layer1.env  layer2_config.yaml  network.yaml  nginx-vps-toiso.conf  nginx-vps.conf.template  nginx.conf  reflection.yaml  rule_candidates.yaml  rules.yaml  system_prompt.txt  thresholds.yaml  unipi_daemon.example.yaml  vps.conf  wg0.conf.template
custom_image/: README.md
custom_image/config/: wg0.conf.template
custom_image/docker/: docker-compose.yaml
custom_image/nodered/: settings.js  setup_flow.json
custom_image/scripts/: backup_config.sh  build_image.sh  first_boot.sh  weather_sensor.service
docker/: docker-compose.vps.yaml  docker-compose.yaml
docker/mosquitto/: mosquitto.conf
docs/: agriha_v4_spec.md  agriha_v4_spec_part2.md  linebot_design.md  llm_control_loop_design.md  mqtt_topic_spec.md  predictive_ventilation_design.md  rpi_os_image_design.md  uecs_ccm_llama_design.md  v2_three_layer_design.md
docs/archive/: uecs_ccm_llama_design.md
docs/legal/: privacy.html  terms.html
hardware/kicad/: ACTUATOR_DESIGN.md  ACTUATOR_REVIEW.md  DESIGN.md  PCB_WORKFLOW.md  REVIEW.md  actuator_board.kicad_pro  actuator_board.kicad_sch  actuator_board_v3.dsn  actuator_board_v3.kicad_pcb  actuator_board_v3.kicad_prl  actuator_board_v3.kicad_pro  actuator_board_v3.net  (+33 more)
image/: README.md  backup_config.sh  build_image.sh  camera_upload.sh  first_boot.sh  install_docker.sh  install_evok.sh  weather_sensor_service.py
linebot/: .env.example  Dockerfile  app.py  docker-compose.yml  import_logs.py  llm_client.py  quiz_scenarios.py  requirements.txt  rpi_client.py  system_prompt.py  tools.py
scripts/: WG_SETUP_GUIDE.md  agriha-capture.sh  csv_to_influx.py  deploy_vps_linebot.sh  gen_farmer_config.sh  llm-chat.sh  setup-camera.sh  start-tmux.sh  wg_client_oneliner.sh  wg_client_pc.conf.example  wg_farmer_setup.sh  wg_farmers_vps_setup.sh  wg_server_setup.sh
services/: agriha-ui.service
systemd/: agriha-control.cron  agriha-cron  agriha-linebot.service  agriha-linebot.service.template  agriha-llm.service  agriha-nullclaw-proxy.service  agriha-ui.service  rain_detector.service  uart_co2_reader.service  unipi-daemon.service
tests/: conftest.py  test_agriha_ui.py  test_qwen3_toolcall.py
(+186 files in other folders)
